# ai_api

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/api/v1/: authenticate.py  chat_completion.py  jwt.py  llms.py  management.py  models.py  root.py  servers.py  status.py  (+2 more)
src/auth/: create_api_key.py  create_secret.py  hash.py  hmac.py  verify.py
src/core/: cache.py  config.py  logging.py  model_types.json
src/database/: api_key.py  schemas.py  session.py  store_person.py  store_secrets.py  store_user.py
src/io_models/: authenticate.py  chat_completion.py  jwt.py  llms.py  models.py  root.py  servers.py  status.py  translations.py
src/middleware/: authenticate.py  get_client.py  jwt_auth.py
src/models/: m_llms.py  m_models.py  m_root.py  m_server_management.py  m_servers.py  m_translate.py  m_translations.py
src/ollama/: models.py  server_status.py  translategemma.py
src/ollama_server/: models.py  server_status.py
src/providers/: general.py
src/server_management/: boot_server.py
src/servers/: boot_server.py  status.py  wake.py
src/setup/: create_admin.py  create_tables.py
tests/: conftest.py  test_main.py
tests/core/: test_config.py
tests/fixtures/: f_ollama.py  ollama.py
tests/ollama/: test_server_status.py
tests/test_auth/: test_create_api_key.py  test_create_secret.py  test_hash.py
tests/test_core/: test_config.py  test_core.py
tests/test_database/: test_api_key.py  test_session.py  test_store_secrets.py
tests/test_middleware/: test_jwt_auth.py
tests/test_ollama/: test_models.py  test_server_status.py  test_translategemma.py
tests/test_servers/: test_server_status.py
(+17 files in other folders)
