[project]
name = "ai-api"
version = "0.1.0"
description = "AI API that functions as a general gateway for multiple providers (e.g., Ollama, Anthropic)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "fastapi-cache2[redis]>=0.2.2",
    "httpx2>=2.5.0",
    "jinja2>=3.1.6",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "uvicorn>=0.51.0",
    "wakeonlan>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-dotenv>=0.5.2",
]
